# fastled-wasm

./: .cursorrules  .gitignore  .mcp-server-config.json  CLAUDE.md  CODEX.md  Cargo.toml  DEBUGGER.md  Dockerfile  FAQ.md  ISSUE_REPORT.md  LOCAL_API_COMPILATION_TEST.md  MANIFEST.in  NO_PLATFORMIO_COMPILATION_TEST.md  PLAN.md  README.md  RELEASE.md  REPO_SYNC_IMPLEMENTATION.md  TODO.md  UV_USAGE_GUIDE.md  VERBOSITY_IMPLEMENTATION.md  _cargo  build-wheel  build_compiler_exe.py  build_compiler_tool.py  build_compilers.py  build_docker_image.py  build_examples.py  build_exe.py  build_local_docker.py  build_site.py  check_uv_compliance.py  chrome_vscode_bridge_design_task.md  clean  docker-compose.yml  entrypoint.sh  index.css  index.html  install  install_linux.sh  lint  (+8 more)
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.github/workflows/: _build.yml  _integration-test.yml  _lint.yml  _unit-test.yml  auto-release.yml  build_compiler_for_docker_amd64.yml  build_compiler_for_docker_arm64.yml  build_docker_image_template.yml  build_multi_docker_image.yml  build_release.yml  build_webpage.yml  caller.yml  check_pfx_b64.yml  compile.yml  create_version_tag.yml  lint.yml  linux-arm-build.yml  linux-x86-build.yml  linux-x86-dwarf-smoke.yml  macos-arm-build.yml  macos-x86-build.yml  macos-x86-integration-test.yml  macos-x86-lint.yml  macos-x86-unit-test.yml  publish_release.yml  push_macos.yml  push_ubuntu.yml  push_win.yml  reusable.yml  test_build_exe.yml  test_macos.yml  test_ubuntu.yml  test_win.yml  vscode-extension-release.yml  vscode-extension.yml  windows-arm-build.yml  windows-arm-integration-test.yml  windows-arm-lint.yml  windows-arm-unit-test.yml  windows-x86-build.yml
Chromancer/: .esbuild_marker  fastled.js  fastled.js.symbols  fastled.wasm  fastled_background_worker.js  fastled_background_worker.js.map  files.json  hash.txt  index.html  out.txt  perf.txt
Chromancer/assets/: OutputPass-BVJ8eGwB.js.map  graphics_manager-Bwn1yiaQ.js
FireCylinder/: app.js  fastled.js  fastled.js.symbols  fastled.wasm  fastled_background_worker.js.map  hash.txt  out.txt  perf.txt
FireCylinder/assets/: graphics_manager-Bwn1yiaQ.js.map  graphics_manager_threejs-DoLCXVee.js.map  three.module-13xj88y1.js.map
FxNoiseRing/: .frontend_hash  audio_worklet_processor.js  fastled.js  fastled.js.symbols  fastled.wasm  fastled_background_worker.js.map  hash.txt  index.html  out.txt  perf.txt
FxNoiseRing/assets/: Pass-CiW0JoHT.js  RenderPass-Dn9_edjb.js
FxSdCard/: app.js.map  fastled.js  fastled.js.symbols  fastled.wasm  files.json  hash.txt  out.txt  perf.txt
FxSdCard/assets/: EffectComposer-DFwmeXDn.js.map  graphics_manager-CZtJ6dKA.js.map  graphics_utils-IETGgF1j.js.map
FxSdCard/data/: video.rgb
FxWater/: .frontend_hash  fastled.js  fastled.js.symbols  fastled.wasm  hash.txt  index.js.map  out.txt  perf.txt
FxWater/assets/: BufferGeometryUtils-DurnHo24.js  BufferGeometryUtils-DurnHo24.js.map  CopyShader-BWJjsCP-.js.map  RenderPass-Dn9_edjb.js.map  graphics_manager_threejs-DtLcIGwD.js.map
FxWave2d/: .esbuild_marker  .frontend_hash  fastled.js  fastled.js.symbols  fastled.wasm  files.json  hash.txt  index.js  out.txt  perf.txt
FxWave2d/assets/: EffectComposer-DFwmeXDn.js  OutputPass-BVJ8eGwB.js  UnrealBloomPass-DOx98EJY.js
LuminescentGrand/: fastled.js  fastled.js.symbols  fastled.wasm  fastled_background_worker.js  hash.txt  index.css  index.js.map  out.txt  perf.txt
LuminescentGrand/assets/: CopyShader-BWJjsCP-.js  graphics_manager_threejs-DtLcIGwD.js
ci/: Dockerfile.linux-test  __init__.py  docker-test  dynamic_runtime_smoke.mjs  env.py  runtime_stack_smoke.mjs
ci/hooks/: README.md  tool_guard  tool_guard.cmd  tool_guard.py
ci/lint_python/: __init__.py  keyboard_interrupt_checker.py
compiler/: code_sync.py  compile.py  entrypoint.sh  final_prewarm.sh  init_runtime.py  init_runtime2.py  paths.py  platformio.ini  prewarm.sh  pyproject.toml  requirements.txt  run.py  server.py  wasm_compiler_flags.py
compiler/extra/: micdemo.html
crates/fastled-cli/: Cargo.toml  build.rs  tauri.conf.json
crates/fastled-cli/assets/: dynamic_loader.js
crates/fastled-cli/src/: archive.rs  build.rs  clangd_config.rs  cli.rs  commands.rs  compile_stream.rs  debug_symbols.rs  dwarf_smoke.rs  dynamic_cache.rs  dynamic_cache_matrix_tests.rs  frontend.rs  install.rs  install_unlock.rs  keyboard.rs  lib.rs  main.rs  path.rs  paths_util.rs  project.rs  runtime.rs  selection.rs  server.rs  sketch_preprocessor.rs  tauri_viewer.rs  test_mode.rs  viewer.rs  wasm_build.rs  watcher.rs
crates/fastled-py/: Cargo.toml
crates/fastled-py/src/: lib.rs
crates/fastled-tauri/: Cargo.toml  tauri.conf.json
crates/fastled-tauri/frontend/: index.html
crates/fastled-tauri/src/: main.rs
demo/: micdemo.html  mp3upload.html
docs/: fastled.js  fastled.wasm  index.js
dylints/ban_std_pathbuf/: Cargo.toml  README.md
dylints/ban_std_pathbuf/src/: allowlist.txt  lib.rs
examples/Blink/: Blink.ino
examples/Chromancer/: Chromancer.ino
examples/NoisePlusPalette/: NoisePlusPalette.ino
examples/SdCard/: SdCard.ino
examples/XYMatrix/: XYMatrix.ino
examples/wasm/: wasm.ino
fx/NoiseRing/: fastled.js  fastled.wasm  hash.txt  out.txt
fx/SdCard/: fastled.js  fastled.wasm  hash.txt  out.txt  perf.txt
fx/Water/: fastled.js  (+2 more)
tests/: test_api.py  test_bad_ino.py  test_build.py  test_build_examples.py  test_build_exe.py  test_build_from_docker.py  test_build_from_github.py  test_cli.py  test_compile_server.py  test_docker_linux_on_windows.py  test_embedded_data.py  test_examples.py  test_filechanger.py  test_http_server.py  test_project_init.py  test_server_and_client_seperatly.py  test_webcompile.py
vscode-plugin/: .gitignore  .vscodeignore  CHANGELOG.md  GET_STARTED.md  INSTALL.md  README.md  README_INSTALL.md  clangd-artifacts.json  language-configuration.json  package-lock.json  package.json  readme  setup.sh  tsconfig.json
wasm/: .fastled_build_state.json  .frontend_hash  fastled.js  fastled.js.symbols  fastled.wasm  fastled.wasm.map  hash.txt  index.js  out.txt  perf.txt
(+234 files in other folders)
