[workspace]
resolver = "2"
members = [
    "crates/fastled-cli",
    "crates/fastled-py",
    "crates/fastled-tauri",
]

[workspace.package]
version = "2.0.6"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/zackees/fastled-wasm"
homepage = "https://github.com/zackees/fastled-wasm"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310", "generate-import-lib"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
notify = { version = "7", features = ["macos_fsevent"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
tar = "0.4"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
strsim = "0.11"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }

[profile.release]
debug = "line-tables-only"
split-debuginfo = "packed"
strip = "none"
