[workspace]
resolver = "2"
members = [
    "crates/fastled-cli",
]

[workspace.package]
version = "2.0.7"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/zackees/fastled-wasm"
homepage = "https://github.com/zackees/fastled-wasm"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
notify = { version = "7", features = ["macos_fsevent"] }
sha2 = "0.10"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
running-process-core = "3.1.0"
zip = "2"
tar = "0.4"
zstd = "0.13"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctcb-manifest = "0.4.1"
ctcb-core = "0.4.1"
dirs = "5"
strsim = "0.11"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tauri = { version = "2", features = ["devtools"] }
tauri-build = { version = "2", features = [] }
windows-sys = "0.61"

[profile.release]
debug = "line-tables-only"
split-debuginfo = "packed"
strip = "none"
