[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fastled"
version = "2.0.7"
readme = "README.md"
description = "FastLED Wasm Compiler"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "zcmds_win32; sys_platform == 'win32'",
]

[tool.maturin]
manifest-path = "crates/fastled-py/Cargo.toml"
module-name = "fastled._native"
python-source = "src"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
# Pre-built Rust binaries get dropped into wheel-data/scripts/ by the
# build-wheel helper before maturin runs. maturin packages this directory as
# the wheel's <pkg>-<ver>.data/ tree; pip then extracts scripts/ to the
# venv's Scripts/ (Windows) or bin/ (Unix) at install time, so end users get
# the Rust `fastled` binary directly — no Python entry-point shim, no
# cargo build at install time.
data = "wheel-data"

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
# `fastled` is intentionally NOT a Python entry-point; the Rust binary is
# bundled into the wheel via [tool.maturin] data (see above) and pip
# installs it directly to the venv's Scripts/bin directory. The Python
# aliases below are kept as thin shims for the rarely-used `python -m`
# invocation paths.
fastled-wasm = "fastled.cli:main"
fled = "fastled.cli:main"
