[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fastled"
version = "2.0.7"
readme = "README.md"
description = "FastLED Wasm Compiler"
requires-python = ">=3.10"
keywords = ["fastled", "wasm", "rust"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    # Build-system dependencies for the FastLED C++ → WASM compile.
    # `meson` configures the build; `ninja` is meson's backend. Both ship
    # standalone executables when pip-installed. Rust owns Emscripten
    # resolution via linked ctcb crates and invokes the checked-in
    # emcc.py/em++.py/emar.py entry points directly.
    "meson>=1.4",
    "ninja>=1.11",
    "zcmds_win32; sys_platform == 'win32'",
]

[tool.maturin]
manifest-path = "crates/fastled-py/Cargo.toml"
module-name = "fastled._native"
python-source = "src"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
# Pre-built Rust binaries get dropped into wheel-data/scripts/ by the
# build-wheel helper before maturin runs. maturin packages this directory as
# the wheel's <pkg>-<ver>.data/ tree; pip then extracts scripts/ to the
# venv's Scripts/ (Windows) or bin/ (Unix) at install time, so the Python
# compatibility shim can launch the Rust `fastled-rs` binary without a cargo
# build at runtime.
data = "wheel-data"

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
# `fastled` remains a Python compatibility entry point during the migration.
# It resolves and execs the Rust binary under the distinct `fastled-rs` name
# so the shim cannot recursively find itself on PATH.
fastled = "fastled.cli:main"
fastled-wasm = "fastled.cli:main"
fled = "fastled.cli:main"
