[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-xdist",
    "pyright",
    "ruff",
    "httpx",
    "build>=1",
    "setuptools>=69",
    "wheel>=0.43",
]

[project]
name = "fastled"
version = "2.0.8"
readme = "README.md"
description = "FastLED Wasm Compiler"
requires-python = ">=3.10"
keywords = ["fastled", "wasm", "rust"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    # Build-system dependencies for the FastLED C++ -> WASM compile.
    # `meson` configures the build; `ninja` is meson's backend. Both ship
    # standalone executables when pip-installed. Rust owns Emscripten
    # resolution via linked ctcb crates and invokes the checked-in
    # emcc.py/em++.py/emar.py entry points directly.
    "meson>=1.4",
    "ninja>=1.11",
    "zcmds_win32; sys_platform == 'win32'",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastled = ["assets/*", "frontend/**/*", "bin/*"]

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
# `fastled` remains a Python compatibility entry point during the migration.
# It resolves and execs the bundled Rust `fastled[.exe]` binary from package
# data; the shim deliberately does not search PATH to avoid recursive launch.
fastled = "fastled.cli:main"
fastled-wasm = "fastled.cli:main"
fled = "fastled.cli:main"
