[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastled_server"
version = "0.1.0"
description = "FastLED Server"
requires-python = ">=3.10"

dependencies = [
    "fastled-wasm-server>=1.0.41",  # Also versions fastled-wasm-compiler dependency.
]

[tool.setuptools]
package-dir = {"" = "."}
