[package]
name = "fastled-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FastLED WASM compilation CLI"

[lib]
name = "fastled_cli"
path = "src/lib.rs"

[[bin]]
name = "fastled-rs"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pyo3 = { workspace = true, features = ["auto-initialize"] }
notify = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ctcb-manifest = { workspace = true }
strsim = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
dirs = { workspace = true }
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/fastled-{ target }{ archive-suffix }"
bin-dir = "fastled-rs{ binary-ext }"
pkg-fmt = "zip"

[dev-dependencies]
