[package]
name = "fastled-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FastLED WASM compilation CLI"

[features]
default = ["viewer"]
viewer = ["dep:tauri", "dep:tauri-build"]

[lib]
name = "fastled_cli"
path = "src/lib.rs"

[[bin]]
name = "fastled"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
notify = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
reqwest = { workspace = true }
running-process = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ctcb-core = { workspace = true }
strsim = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
tauri = { workspace = true, optional = true }
tempfile = "3"

[build-dependencies]
indexmap = { version = "1.9.3", features = ["std"] }
tauri-build = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/fastled-{ target }{ archive-suffix }"
bin-dir = "fastled{ binary-ext }"
pkg-fmt = "zip"

[dev-dependencies]
