[package]
name = "fastled-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FastLED WASM viewer (Tauri webview)"

[[bin]]
name = "fastled-viewer"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/fastled-viewer-{ target }{ archive-suffix }"
bin-dir = "fastled-viewer{ binary-ext }"
pkg-fmt = "zip"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
