[package]
name = "ban_std_pathbuf"
version = "0.1.0"
description = "Ban std::path::PathBuf outside the legacy allowlist (ported from zccache)"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "6.0.1"

[dev-dependencies]
dylint_testing = "6.0.1"

[package.metadata.rust-analyzer]
rustc_private = true
